--- a/package.json
+++ b/package.json
@@ -11,18 +11,36 @@
   "dependencies": {
     "@auth/core": "^0.36.0",
     "@convex-dev/auth": "^0.0.75",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.17.3",
+    "date-fns": "^4.1.0",
+    "emoji-mart": "^5.6.0",
+    "jotai": "^2.10.3",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
+    "next-themes": "^0.4.4",
+    "popover": "^2.4.1",
+    "quill": "^2.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.3.0",
+    "react-resizable-panels": "^2.1.7",
+    "react-use": "^17.6.0",
+    "react-verification-input": "^4.2.0",
+    "shadcn": "^2.1.8",
+    "shadcn-ui": "^0.9.4",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
