--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
     "next-themes": "^0.4.4",
+    "nuqs": "^1.17.8",
     "popover": "^2.4.1",
     "quill": "^2.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
