--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-separator": "^1.1.0",
@@ -23,9 +23,11 @@
     "add": "^2.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "convex": "^1.17.3",
     "date-fns": "^4.1.0",
     "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.12.0",
     "jotai": "^2.10.3",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
