--- a/package.json
+++ b/package.json
@@ -27,13 +27,12 @@
     "emoji-picker-react": "^4.12.0",
     "jotai": "^2.10.3",
     "lucide-react": "^0.462.0",
-    "next": "15.0.3",
     "next-themes": "^0.4.4",
     "nuqs": "^1.17.8",
     "popover": "^2.4.1",
     "quill": "^2.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-resizable-panels": "^2.1.7",
     "react-use": "^17.6.0",
