--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "emoji-picker-react": "^4.12.0",
     "jotai": "^2.10.3",
     "lucide-react": "^0.462.0",
+    "next": "^15.1.3",
     "next-themes": "^0.4.4",
     "nuqs": "^1.17.8",
     "popover": "^2.4.1",
